Changed visual place to frontend Edit tool button

--- a/cyclope/templates/cyclope/teaser_tools_block.html
+++ b/cyclope/templates/cyclope/teaser_tools_block.html
@@ -3,9 +3,5 @@
 {% per_category_perms current_object as cat_perms %}
 
 {% if cat_perms.edit_content %}
-<div class="tools meta-content">
-  <a href="/admin/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{current_object.pk }}?_frontend=1&_popup=1" class="edit_link">
-    {% trans "Edit" %}
-  </a>
-</div>
+	<a class="btn btn-default edit_content" role="button" href="/admin/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{current_object.pk }}?_frontend=1&_popup=1"> {% trans "Edit" %}</a>
 {% endif %}
