--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -24,7 +24,7 @@
     <!-- /Meta -->
 	<!-- ### Extras ### -->
     <link rel="alternate" href="/rss" title="RSS" type="application/rss+xml"/>
-    <link rel="icon" href="{{ CYCLOPE_THEME_MEDIA_URL }}images/favicon.png" sizes="16x16" type="image/png"/>
+    <link rel="icon" href="{{ CYCLOPE_THEME_MEDIA_URL }}images/favicon.ico" sizes="16x16" type="image/png"/>
     <!-- /Extras -->
     <!-- ### CSS ### -->
     {% compress css %}
@@ -37,8 +37,8 @@
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/css.less" rel="stylesheet{% if not COMPRESS_ENABLED %}/less{% endif %}" type="text/less"/>
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+      <!-- <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"> -->
+      <!-- <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"> -->
     {% endblock cyclopecss %}
     {% endblock displaycss %}
     {% endcompress %}
@@ -159,24 +159,8 @@
         <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO">
           Licencia Creative Commons BY-NC-ND
         </a></span>.<br/>
-        <span id="codigo_sur">Tecnología: <a href="http://cyclope.codigosur.org">Cyclope 3 GPL</a>. Hecho por <a href="http://www.codigosur.org">Código Sur</a>.
+        <span id="codigo_sur">Tecnología: <a href="http://cyclope.codigosur.org">CyclopeCMS</a>. Desarrollo: <a href="http://www.codigosur.org">CódigoSur</a>.
         </span><br/>
-        <span>Este sitio ha sido desarrollado sobre estándares de diseño web que cualquier navegador de calidad visualizará correctamente. </span><br/>
-
-        <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/css/navegadores.png" width="246" height="36" border="0" usemap="#map-nav" alt="navegadores"/>
-        <map name="map-nav" id="map-nav">
-          <!-- #$-:Image map file created by GIMP Image Map plug-in -->
-          <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
-          <!-- #$-:Please do not edit lines starting with "#$" -->
-          <!-- #$VERSION:2.3 -->
-          <!-- #$AUTHOR:sh -->
-          <area shape="rect" coords="48,1,85,35" alt="Konkeror" title="Konkeror" href="http://www.konqueror.org/" />
-          <area shape="rect" coords="6,1,41,35" alt="Mozilla Firefox" title="Mozilla Firefox" href="http://www.mozilla-europe.org/es/firefox/" />
-          <area shape="rect" coords="88,0,120,36" alt="Epiphany" title="Epiphany" href="http://projects.gnome.org/epiphany/" />
-          <area shape="rect" coords="126,1,158,35" alt="Opera" title="Opera" href="http://www.opera.com/download/" />
-          <area shape="rect" coords="162,3,199,34" alt="Safari" title="Safari" href="http://www.apple.com/es/safari/download/" />
-          <area shape="rect" coords="206,4,242,34" alt="Google Chrome" title="Google Chrome" href="http://www.google.com/chrome/index.html?hl=es" />
-        </map>
   </div>
   </div>
 </div><!-- /end mask -->
