--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -4,7 +4,7 @@
 <div class="content-view {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser">
 
   <h2 class="title">
-  <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
+ 
   <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
   </h2>
 
@@ -23,6 +23,11 @@
       {% endif %}
       </div>
   {% endif %}
+  
+   
+       <p><a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a> 
+       {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
+       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" /></p>
 
   {% include "cyclope/author_block.html" with author=current_object.author %}
 
