Improved in css

--- a/cyclope/media/themes/cyclope-bootstrap/css/css.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/css.less
@@ -11,6 +11,7 @@ body {
 }
 footer {
   padding: 30px 0;
+  font-size:11px;
 }
 /*
  * Cyclope
@@ -18,9 +19,10 @@ footer {
  */
 #block_content {overflow:auto;}
 .jumbotron .title {font-size: 63px;} /*fixed size title in jumbotron - forced h2*/
-img.type_icon {float:right;}
+img.type_icon {display:inline;}
 #bottom .content-view {width:33.33333%;float:left;}
 
+#right .collapse {display:block;}
 #right .navbar-nav {width: 100% !important;margin:0 0 10px;padding:0;}
 #right .navbar-nav ul {width: 100% !important;}
 #right .navbar-collapse {padding:0 !important;}
