--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -1,10 +1,10 @@
 {% load i18n cyclope_utils fb_versions %}
 
 {% block content %}
-<div class="content-view {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser">
+<div class="content-view {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% theme_classes %}">
 
   <h2 class="title">
- 
+
   <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
   </h2>
 
@@ -23,9 +23,9 @@
       {% endif %}
       </div>
   {% endif %}
-  
-   
-       <p><a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a> 
+
+
+       <p><a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a>
        {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" /></p>
 
