added theme region_ids

--- a/cyclope/templates/cyclope/region.html
+++ b/cyclope/templates/cyclope/region.html
@@ -2,7 +2,7 @@
 template used to insert views inside layout regions
 {% endcomment %}
 
-<div class="{{ layout_name }} region" id="{{ region_name }}">
+<div class="{{ layout_name }} region" id="{% if region_theme_id %}{{ region_theme_id }}{% else %}{{ region_name }}{% endif %}">
   {% for view_params in views %}
     <div class="regionview {{ view_params.model }} {{ view_params.name }}" {% if view_params.slug %} id="{{ view_params.slug }}_{{ view_params.model }}_{{region_name}}" {% endif %}>
       {{ view_params.output|safe }}
