--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -15,12 +15,12 @@
 
     <h2 class="title">
 
-		<a href="{{ article.get_absolute_url }}">{{ article.name }}</a>
+        <a href="{{ article.get_absolute_url }}">{{ article.name }}</a>
     </h2>
 
     {% if not simplified_view and article.get_picture %}
       <div class="teaser_icon_container"><a href="{{ article.get_absolute_url }}" title="{{ article.get_picture.name }}">
-          <img class="teaser_icon" src="{% version article.get_picture.image.path 'small' %}" alt="{{ article.get_picture.name }}" width="135" border="0"/>
+          <img class="teaser_icon img-responsive" src="{% version article.get_picture.image.path 'small' %}" alt="{{ article.get_picture.name }}" width="135" border="0"/>
       </a></div>
     {% endif %}
 
