--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -11,24 +11,18 @@
   {% if current_object.image %}
       <div class="teaser_icon_container media-content">
       <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
-        <img class="teaser_icon" src="{% version current_object.image.path 'small' %}" border="0"/>
+        <img class="teaser_icon img-responsive" src="{% version current_object.image.path 'small' %}" border="0"/>
       </a>
     </div>
   {% endif %}
 
   {% if current_object.description %}
   <div class="html-content summary">{{ current_object.description|smart_style }}
-      {% if not current_object.skip_detail %}
-          <span class="more"><a href="{{ current_object.get_absolute_url }}">{% trans "More"%}</a></span>
-      {% endif %}
-      </div>
-  {% endif %}
-
-
-       <p><a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a>
+       <p>{% if not current_object.skip_detail %}<a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a> {% endif %}
        {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" /></p>
-
+      </div>
+  {% endif %}
   {% include "cyclope/author_block.html" with author=current_object.author %}
 
   {% block player %}
