--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
@@ -2,7 +2,7 @@
 
   <div class="content-view staticpage teaser staticpage-teaser {% theme_classes %}">
 
-    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" /><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name }}</a></h2>
+    <h2 class="title"><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name }}</a></h2>
 
     {% if staticpage.summary %}
       <h3 class="html-content summary">{{ staticpage.summary|smart_style }}</h3>
@@ -10,13 +10,17 @@
 
     {% if staticpage.pictures %}
      <div class="teaser_icon_container"><a href="{% url staticpage-detail staticpage.slug %}">
-        <img class="teaser_icon" src="{% version staticpage.pictures.0.image.path 'small' %}" width="135" border="0"/>
+        <img class="teaser_icon img-responsive" src="{% version staticpage.pictures.0.image.path 'small' %}" width="135" border="0"/>
       </a></div>
     {% endif %}
 
     {% if staticpage.text %}
-      <h3 class="html-content summary">{{ staticpage.text|smart_style|striptags|truncatewords:40 }}</h3>
+      <div class="html-content summary">{{ staticpage.text|smart_style|striptags|truncatewords:40 }}</div>
     {% endif %}
+    
+       <p><a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a> 
+       {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
+       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" /></p>
 
     <div class="clear"></div>
   </div>
