Added teaser_more class to span with buttons & type_icon

--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -18,7 +18,7 @@
 
   {% if current_object.description %}
   <div class="html-content summary">{{ current_object.description|smart_style }}
-       <p>{% if not current_object.skip_detail %}<a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a> {% endif %}
+       <p class="teaser_more">{% if not current_object.skip_detail %}<a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a> {% endif %}
        {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" /></p>
       </div>
