--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
@@ -18,7 +18,7 @@
       <div class="html-content summary">{{ staticpage.text|smart_style|striptags|truncatewords:40 }}</div>
     {% endif %}
     
-       <p><a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a> 
+       <p class="teaser_more"><a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a> 
        {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" /></p>
 
