Added comment to multilang tag-lang

--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -10,6 +10,7 @@
 
 {% load layout i18n cyclope_utils compress %}
 
+{# TODO(sanhoerth): find best way to show lang-tag in mulitlang enviroment #}
 <html lang="es">
 <head>
     <!-- ### Meta ### -->
