--- a/cyclope/templates/cyclope/menu_menuitems_hierarchy_item.html
+++ b/cyclope/templates/cyclope/menu_menuitems_hierarchy_item.html
@@ -1,6 +1,2 @@
-{% if menu_item.custom_url %}
-  <a href="{{menu_item.url}}">
-{% else %}
-  <a href="/{{CYCLOPE_PREFIX}}{{menu_item.url}}">
-{% endif %}
-{{ menu_item.name }}</a>
+<a href="{% if menu_item.custom_url %}{{menu_item.url}}{% else %}/{{CYCLOPE_PREFIX}}{{menu_item.url}}{% endif %}"
+{% if has_children == "has_children" %} class=" dropdown-toggle" data-toggle="dropdown" role="button"{% endif %}>{{ menu_item.name }}{% if has_children == "has_children" %}<span class="caret"></span>{% endif %}</a>
