--- a/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
+++ b/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
@@ -2,7 +2,7 @@
 {% load cyclope_utils %}
 
 {% block content %}
-<div id="navbar" class="collapse navbar-collapse">
+<div class="collapse navbar-collapse">
 <ul id="menu-{{ expand_style|lower }}-{{ menu_slug }}" class="cyclope_menu {{ expand_style|lower }} nav navbar-nav" >
 	  {{ menu_items|unordered_list_css }}
 </ul>
