--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/default.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/default.html
@@ -7,7 +7,7 @@
 
 
 {% block page_content %}
-<!-- <div class="row">{% region 'left' %}</div> -->
+{# <div class="row">{% region 'left' %}</div> #}
     <div class="col-xs-12 col-sm-9">
         <div class="row">{% region 'top' %}</div>
          <!-- toogle nav for different devices and resolutions -->
