--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/main.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/main.html
@@ -3,7 +3,7 @@
 {% block body_class %}main{% endblock %}
 
 {% block page_content %}
-<!-- <div class="row">{% region 'left' %}</div> -->
+{# <div class="row">{% region 'left' %}</div> #}
     <div class="col-xs-12 col-sm-9">
         <div class="row">{% region 'top' %}</div>
          <!-- toogle nav for different devices and resolutions -->
