--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
@@ -3,7 +3,8 @@
 
 {% block media_content_download %}
   <div class="action-content download_link">
-    <a href="{{ current_object.content_url }}" {% if current_object.new_window %}target="_blank"{% endif %}>
+    <a class="btn btn-primary" role="button"  href="{{ current_object.content_url }}" {% if current_object.new_window %}target="_blank"{% endif %}>
+    <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
     {% trans "Open external content"%} {% if media.new_window %}{% trans " (in new window)"%}{% endif %}
     </a>
   </div>
