--- a/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
@@ -46,7 +46,7 @@ var media_loaded = media_loaded || loadMedia();
 </script>
 {% endblock %}
 
-<div class='player'>
+<div class="player center-block" align="center">
 {% with type=current_object.get_object_name file_type=current_object.file_type %}
   {% if file_type == 'mp3' or file_type == 'ogg' %}
     <audio controls="control" preload="none" src="{{ current_object.media_file }}" type="audio/{{ file_type }}" height="{{ player_audio_height|default:30 }}" width="{{ player_audio_width|default:240 }}"></audio>
