--- a/cyclope/templates/cyclope/content_tools_block.html
+++ b/cyclope/templates/cyclope/content_tools_block.html
@@ -12,16 +12,72 @@
       {% endblock %}
     {% endif %}
 
-    <ul>
-      <li class="first"><a href="javascript:window.print()" class="print">{% trans "Print" %}</a>
+
+
+<!-- ########## 
+<button type="button" class="btn btn-default btn-sm">
+  <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+  {% trans "Print" %}
+  </button>
+{% if user.is_authenticated and CYCLOPE_SITE_SETTINGS.enable_abuse_reports %}
+  <button type="button" class="btn btn-default btn-sm">
+  <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+  {% trans "Report abuse" %}
+  </button>
+  {% endif %}
+
+ {% if current_object.allow_comments == 'YES' or current_object.allow_comments == 'SITE' and CYCLOPE_SITE_SETTINGS.allow_comments == 'YES' %}
+      {% if comment_count %}
+<button type="button" class="btn btn-default btn-sm">
+  <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+  <a href="#comments" class="comments_link">{% trans "Comments" %} ({{ comment_count }})</a>
+  </button>
+  {% endif %}
+{% endif %}
+
+
+
+ {% per_category_perms current_object as cat_perms %}
+      {% if cat_perms.edit_content %}
+
+     <button type="button" class="btn btn-default btn-sm">
+  <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+  <a href="/admin/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{current_object.pk }}?_frontend=1&_popup=1" class="edit_link">
+{% trans "Edit" %} </a>
+  </button>
+
+<button type="button" class="btn btn-default btn-sm">
+  <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+   <a href="/{{ current_object.get_object_name }}/{{ current_object.slug }}/delete/" class="delete_link">
+   {% trans "Delete" %} </a>
+  </button>
+      {% endif %} -->
+
+
+
+
+    <ul class="list-inline">
+      <li>
+          <a href="javascript:window.print()" class="print">
+              <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+              {% trans "Print" %}
+          </a>
       </li>
       {% if user.is_authenticated and CYCLOPE_SITE_SETTINGS.enable_abuse_reports %}
-      <li class='abuse-report'><a href="{{current_object|abuse_report_link}}">{% trans "Report abuse" %}</a></li>
+      <li class='abuse-report'>
+          <a href="{{current_object|abuse_report_link}}">
+              <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+              {% trans "Report abuse" %}
+          </a>
+      </li>
       {% endif %}
       {% if current_object.allow_comments == 'YES' or current_object.allow_comments == 'SITE' and CYCLOPE_SITE_SETTINGS.allow_comments == 'YES' %}
       {% if comment_count %}
       <li>
-        <a href="#comments" class="comments_link">{% trans "Comments" %} ({{ comment_count }})</a>
+          <a href="#comments" class="comments_link">
+              <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+              {% trans "Comments" %} <span class="badge alert-info">{{ comment_count }}</span>
+          </a>
       </li>
       {% endif %}
       {% endif %}
@@ -30,11 +86,13 @@
       {% if cat_perms.edit_content %}
       <li>
         <a href="/admin/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{current_object.pk }}?_frontend=1&_popup=1" class="edit_link">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           {% trans "Edit" %}
         </a>
       </li>
       <li>
         <a href="/{{ current_object.get_object_name }}/{{ current_object.slug }}/delete/" class="delete_link">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
           {% trans "Delete" %}
         </a>
       </li>
