--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="content-view {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% theme_classes %}">
-
+<div class="{% joker_classes %}">
   <h2 class="title">
 
   <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
@@ -29,6 +29,6 @@
   {% include "cyclope/author_block.html" with author=current_object.author %}
 
   <div class="clear"></div>
-
+</div>
 </div>
 {% endblock content%}
