Improved and fixed regions ids & classes

--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -1,6 +1,6 @@
 {% load i18n fb_versions dbgettext_tags cyclope_utils %}
 
-  <div class="content-view article teaser article-teaser {% theme_classes %}">
+  <div class="content-view article teaser article-teaser {% inline_content_classes %}">
 
     <div class="pretitle-container first meta-content">
       {% if  article.pretitle and not simplified_view %}
