--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
@@ -1,6 +1,6 @@
 {% load i18n fb_versions cyclope_utils %}
 
-  <div class="content-view staticpage teaser staticpage-teaser {% theme_classes %}">
+  <div class="content-view staticpage teaser staticpage-teaser {% inline_content_classes %}">
 
     <h2 class="title"><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name }}</a></h2>
 
