Improved css SiteMap unordered list

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -26,6 +26,11 @@ img.type_icon {display:inline;}
 .breadcrumb ol.content_types {background:#ccc;position:absolute;list-style:none;padding:0;margin:0;}
 #block_content {overflow:auto;}
 
+#map ul {margin:0;padding:0;list-style:none;}
+#map li {font-weight:700;}
+#map ul ul {margin:10px 0;}
+#map ul ul ul {margin:0;}
+#map li li {font-weight:400;margin:0 0 0 20px;}
 
 .related_contents ul  {list-style:none !important;padding:0;margin:0;}
 
