Changed crispy forms to bootstrap

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -18,6 +18,8 @@ footer {
  * --------------------------------------------------
  */
 
+form.crispy-dynamic-form .controls .radio, form.crispy-dynamic-form .controls .checkbox  {margin:0 0 0 20px;font-weight:400;}
+form.crispy-dynamic-form img {display:block;}
 img.type_icon {display:inline;}
 .jumbotron .title {font-size: 63px;}
 .jumbotron img.teaser_icon {float:left;margin:0 10px 0 0;border-radius:50%;}
@@ -26,6 +28,7 @@ img.type_icon {display:inline;}
 .breadcrumb ol.content_types {background:#ccc;position:absolute;list-style:none;padding:0;margin:0;}
 #block_content {overflow:auto;}
 
+.default .title {border-bottom:1px solid #999;padding:0 0 10px;}
 #map ul {margin:0;padding:0;list-style:none;}
 #map li {font-weight:700;}
 #map ul ul {margin:10px 0;}
