--- a/cyclope/apps/dynamicforms/templates/forms/includes/built_form.html
+++ b/cyclope/apps/dynamicforms/templates/forms/includes/built_form.html
@@ -5,10 +5,9 @@
         <div class="summary">{{ form.intro|smart_style }}</div>
     </div>
     {% endif %}
-    <form class="uniForm" action="{{ form.get_absolute_url }}" method="post"
-        {% if form_for_form.is_multipart %}enctype="multipart/form-data"{% endif %}>{% csrf_token %}
+    <form class="crispy-dynamic-form" action="{{ form.get_absolute_url }}" method="post" {% if form_for_form.is_multipart %}enctype="multipart/form-data"{% endif %}>{% csrf_token %}
         {{ form_for_form|crispy }}
-        <div class="buttonHolder">
-          <input type="submit" value="{{ form.button_text }}">
+        <div>
+          <input class="btn btn-primary" type="submit" value="{{ form.button_text }}">
         </div>
     </form>
