--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -132,11 +132,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               
-                    <a class="navbar-brand" href="#">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a>
-                
+                <a class="navbar-brand" href="#">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a>
             </div>
-            <!-- header -->  {% region 'header' %} <!-- /header -->	
+            <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+            <!-- header -->  {% region 'header' %} <!-- /header -->
+            </div>
         </div><!-- /.container -->
     </nav><!-- /.navbar -->
     
