Improved view polls with bootstrap

--- a/cyclope/apps/polls/templates/polls/poll_detail.html
+++ b/cyclope/apps/polls/templates/polls/poll_detail.html
@@ -15,6 +15,10 @@
   <!-- herramientas -->
   {% include 'cyclope/content_tools_block.html' %}
 
+  <h3 class="summary">
+    {{ poll.description}}
+  </h3>
+  
     <div class="poll_results">
       {% for question in poll.question_set.all %}
         <p>{{ question.text }}</p>
