--- a/cyclope/apps/polls/templates/polls/poll_submission.html
+++ b/cyclope/apps/polls/templates/polls/poll_submission.html
@@ -6,23 +6,29 @@
 
 {% alias poll as 'current_object' %}
 
-<div class="content-view poll submission poll-submission">
+<div class="content-view poll submission poll-submission panel panel-primary">
 
   <div class="meta-content">{% include 'collections/categories_navigation_block.html' %}</div>
+<div class="panel-heading">
+ <h3 class="panel-title">{{ poll.name }}</h3>
+ 
+</div>
+  <div class="summary">
+    {{ poll.description}}
+  </div>
 
-  <h1 class="title">{{ poll.name }}</h1>
 
-  <form action="{% url poll-submission poll.slug %}" method="POST" class="uniForm">
+  <form action="{% url poll-submission poll.slug %}" method="POST">
     {% csrf_token %}
     {% for form in forms %}
         {{ form|crispy }}
     {% endfor %}
     {{ captcha_form|crispy }}
-    <div class="buttonHolder">
-      <input type="submit" value="{% trans 'Submit' %}" />
+    <div  class="panel-footer">
+      <input class="btn btn-primary btn-sm" type="submit" value="{% trans 'Vote' %}" />
+      <a class="btn btn-default btn-sm" href="{% url poll poll.slug %}">{% trans 'View Results' %}</a>
     </div>
   </form>
 
 </div>
-
 {% endblock content%}
